Creating an image for the about us page and animating it on the initial page load. Also included a possible fix for the site overflowing into the right side.

--- a/src/styles/about/about.scss
+++ b/src/styles/about/about.scss
@@ -27,4 +27,54 @@
       text-align: left;
     }
   }
+  .about-img-container {
+    .who-care-image-about {
+      box-shadow: 2px 5px 25px $dark;
+      max-width: 500px;
+      max-height: 400px;
+      @include breakpoint(small) {
+        width: 300px;
+        height: 200px;
+      }
+      @include breakpoint(extra-small) {
+        width: 250px;
+        height: 180px;
+      }
+    }
+    @include breakpoint(medium){
+      padding-left: 15%;
+    }
+  }
+}
+
+@keyframes about-us-slide-in {
+  to {
+    opacity: 1;
+    transition: opacity 900ms ease-in-out;
+    transform: translate(0);
+  }
+}
+
+
+.about-us-img-transition-appear{
+  opacity: 0;
+  transform: translate(100px);
+}
+
+.about-us-img-transition-appear.about-us-img-transition-appear-active{
+  animation-name: about-us-slide-in;
+  animation-duration: 1s;
+}
+
+@media screen and(max-width:1057px){
+  .who-care-image-about{
+    width: 450px;
+    height: 350px;
+  }
+}
+
+@media screen and(max-width: 320px) {
+  .about-img-container{
+    padding-left: 10% !important;
+  }
 }
