--- a/src/styles/common/footer.scss
+++ b/src/styles/common/footer.scss
@@ -2,6 +2,7 @@
 
 //footer styles
 .site-footer{
+  overflow-x:hidden;
   background-color: $dark;
   position: absolute;
   bottom:0;
